# paper-tales

./: .gitignore  README.md  blog-post.md  cloudbuild.yaml  docker-compose.yml  firebase.json  firestore.indexes.json  papertales-project-plan.md
backend/: .env.example  .gcloudignore  Dockerfile  demo_pipeline.py  main.py  pyproject.toml  test_story_generation.py
backend/papertales/: __init__.py  agent.py  auth.py  config.py  firestore_service.py  job_service.py  log_context.py  paper_search.py  url_validation.py
backend/papertales/agents/: audio_narrator.py  concept_extractor.py  fact_checker.py  language_simplifier.py  narrative_designer.py  narrative_gate.py  paper_parser.py  story_assembler.py  story_illustrator.py
backend/papertales/tools/: audio_tools.py  factcheck_tools.py  pdf_tools.py  readability_tools.py  storage_tools.py  story_tools.py
backend/tests/: conftest.py  test_api.py  test_audio_tools.py  test_extract_scene_texts.py  test_factcheck_tools.py  test_firestore_service.py  test_job_service.py  test_narrative_gate.py  test_paper_search.py  test_pdf_tools.py  test_retry_config.py  test_storage_tools.py  test_tools.py  test_url_validation.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  firebase.ts  index.css
frontend/src/components/: AuthBar.tsx  LoadingSpinner.tsx  MyStories.tsx  PaperUploader.tsx  StoryViewer.tsx  TopPapers.tsx  VoteButtons.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useAuth.ts  useAuthMedia.ts  (+1 more)
scripts/: generate_field_icons.py
(+5 files in other folders)
